added intents for navigation for games

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,19 @@
         <activity android:name=".Emotion_defActivity" android:screenOrientation="landscape"/>
         <activity android:name=".Emotion_picsActivity" android:screenOrientation="landscape"/>
         <activity android:name=".Emotion_vidActivity" android:screenOrientation="landscape"/>
-        <activity android:name=".GamesActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".GamesActivity" android:screenOrientation="landscape"
+            android:parentActivityName=".HomeActivity" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".HomeActivity" />
+        </activity>
         <activity android:name=".EmotionsActivity" android:screenOrientation="landscape"/>
-        <activity android:name=".Game1Activity" android:screenOrientation="landscape" ></activity>
+        <activity android:name=".Game1Activity" android:screenOrientation="landscape"
+            android:parentActivityName=".GamesActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GamesActivity" />
+        </activity>
     </application>
 
 </manifest>
