re-added top bar for navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,12 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".HomeActivity" />
         </activity>
-        <activity android:name=".EmotionsActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".EmotionsActivity" android:screenOrientation="landscape"
+            android:parentActivityName=".HomeActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".HomeActivity" />
+        </activity>
         <activity android:name=".Game1Activity" android:screenOrientation="landscape"
             android:parentActivityName=".GamesActivity" >
             <meta-data
